--- a/iMessage-Geet/iMessage-Geet/Localization/en.lproj/Localizable.strings
+++ b/iMessage-Geet/iMessage-Geet/Localization/en.lproj/Localizable.strings
@@ -38,3 +38,7 @@
 "zero_state_subtitle_promotions" = "Messages filtered as Promotions will appear here.";
 "zero_state_subtitle_junk" = "Messages filtered as junk will appear here.";
 "zero_state_subtitle_deleted" = "Conversations show the days remaining before deletion. After that time, messages will be permanently deleted. This may take up to 40 days.";
+
+// MARK: - MessagesListViewController
+
+"list_vc_nav_bar_left_button_title" = "Filters";
